# scoap3

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  docker-compose.yml  local.yml  manage.py  package.json  production.yml  pyproject.toml  setup.cfg
.envs/: .django  .postgres
.envs/.local/: .postgres
.envs/local/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: backend-tests.yml  build.yml  pre-commit.yml  pull-request-main.yml  push-main.yml  tests.yml
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/local/opensearch/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
compose/production/ui/: Dockerfile
config/: api_router.py  celery_app.py  search_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
requirements/: base.txt  production.txt
scoap3/: conftest.py  constants.py  tasks.py
scoap3/articles/: admin.py  apps.py  documents.py  models.py  permissions.py  tasks.py  util.py
scoap3/articles/api/: serializers.py  views.py
scoap3/articles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_article_abstract_alter_article_acceptance_date_and_more.py  0004_alter_article_abstract_and_more.py  0005_articlefile_rename_created_at_article__created_at_and_more.py  0006_alter_article__files.py  0007_alter_article_subtitle.py  0008_remove_article__files_articlefile_article_id_and_more.py  0009_alter_articlefile_file.py  0010_alter_articlefile_article_id.py  0011_alter_articleidentifier_article_id.py  0012_compliancereport.py  0013_compliancereport_check_article_type_description_and_more.py  0014_compliancereport_check_authors_affiliation_and_more.py  0015_compliancereport_compliant.py  0016_compliancereport_check_required_file_formats_and_more.py  0017_remove_compliancereport_check_file_formats_and_more.py  0018_articlefile_filetype.py  0019_compliancereport_check_contains_funded_by_scoap3_and_more.py
scoap3/articles/templatetags/: custom_filters.py
scoap3/articles/tests/: test_article.py  test_article_compliance.py  test_article_compliance_csv_export.py  test_article_indexing.py  test_article_views.py  test_funded_by_scoap3.py  test_record_views.py  test_search.py
scoap3/authors/: admin.py  apps.py  models.py
scoap3/authors/api/: serializers.py  views.py
scoap3/authors/migrations/: 0001_initial.py  0002_alter_author_article_id_alter_author_author_order_and_more.py  0003_alter_author_first_name_alter_author_last_name.py  0004_alter_authoridentifier_author_id.py  0005_alter_author_article_id.py
scoap3/authors/tests/: test_author_views.py
scoap3/exports/: admin.py  forms.py  models.py  views.py
scoap3/fixtures/: local.json
scoap3/management/commands/: affiliation_export.py  articles_index.py  author_export.py  elastic_search_client.py  import_legacy_records.py  link_affiliations.py  migrate_legacy_records.py  monitor.py  utils.py
scoap3/misc/: admin.py  apps.py  models.py  utils.py
scoap3/misc/api/: serializers.py  views.py
scoap3/misc/migrations/: 0001_initial.py  0002_alter_publicationinfo_artid_and_more.py  0003_alter_license_name.py  0004_alter_affiliation_organization_and_more.py  0005_alter_affiliation_organization_and_more.py  0006_alter_license_url.py  0007_alter_affiliation_value_and_more.py  0008_alter_publicationinfo_page_end_and_more.py  0009_alter_affiliation_author_id_and_more.py  (+11 more)
scoap3/templates/: base.html
scoap3/users/: admin.py  apps.py  models.py  urls.py
scoap3/utils/: context_processors.py  legacy.py  renderer.py  throttling.py  tools.py
ui/: .eslintrc.json  .gitignore  next.config.js  package.json  tailwind.config.ts  token.ts
ui/src/: types.ts
webpack/: common.config.js  dev.config.js  prod.config.js
(+66 files in other folders)
